--- a/Grup_ 8_Annonser/Grup_ 8_Annonser/Views/Home/Create.cshtml
+++ b/Grup_ 8_Annonser/Grup_ 8_Annonser/Views/Home/Create.cshtml
@@ -7,7 +7,7 @@
     <!-- stylesheet links -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./StandardTheme.css" />
+    <link rel="stylesheet" type="text/css" href="~/Style/StandardTheme.css" />
 </head>
 <body>
     <header class="App-header">
