--- a/Grup_ 8_Annonser/Grup_ 8_Annonser/Views/Home/Read.cshtml
+++ b/Grup_ 8_Annonser/Grup_ 8_Annonser/Views/Home/Read.cshtml
@@ -1,108 +1,11 @@
 ﻿@model List<Grup__8_Annonser.ServiceReferenceAnnons.AnnonsKlass>
+@{
+                ViewBag.Title = "Read";
+}
 
-@*@{
-    // kolla session - visa sida om inloggad
-    if (Session["thisLogin"] == null)
-    {
-        Response.Redirect("Login");
-    }
-
-    else
-    {
-
-    }
-
-
-    Layout = null;
-}*@
-
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    @*<link rel="stylesheet" type="text/css" href="~/base_css.css" />*@
-    <title>Read</title>
-</head>
-
-<body>
-
-</body>
-</html>
-
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Page Title</title>
-    <!-- stylesheet links -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./StandardTheme.css" />
-</head>
-<body>
-    <header class="App-header">
-        <!-- nav bar example -->
-        <nav class="navbar navbar-expand-lg">
-
-            <!-- App title example -->
-            <h1 class="App-title">Find It</h1>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <!-- link item example -->
-                    <li class="nav-item active">
-                        <a class="nav-link linkColor" href="/">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link linkColor" href="/reklam">Reklam</a>
-                    </li>
-                    <!-- Dropdown example -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle linkColor" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Disabled</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-
-    <!-- content area example -->
-    <div class="col-sm-8 offset-sm-2 ContentArea row  " style="height:800px;">
-        <div class="col-sm-6">
-            <h1>Read annons</h1>
-            <p class="Small-title">Small title</p>
-            @*Skriver ut all data från databasen genom en "foreach"*@
-            @foreach (var item in Model)
-            {
-                <p>Annons: @item.Resurs</p>
-            }
-        </div>
-        <div class="col-sm-6 ContentAreaHighlight" style="height: 300px">
-            <h1>Highlight Area</h1>
-            <p>some text... </p>
-        </div>
-    </div>
-    <!-- footer example -->
-    <footer style="height: 350px;">
-        <h1 class="App-title">Find It</h1>
-        <h2>Footer</h2>
-    </footer>
-
-    <!-- script links -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-</body>
-</html>
+<h1>Read annons</h1>
+@*Skriver ut all data från databasen genom en "foreach"*@
+@foreach (var item in Model)
+{
+    <p>Annons: @item.resource</p>
+}
