--- a/Grup_ 8_Annonser/Grup_ 8_Annonser/Views/Home/Create.cshtml
+++ b/Grup_ 8_Annonser/Grup_ 8_Annonser/Views/Home/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Grup__8_Annonser.ServiceReferenceAnnons.AnnonsKlass
+﻿@*@model Grup__8_Annonser.ServiceReferenceAnnons.AnnonsKlass
 @{
     /**/
 
@@ -22,4 +22,4 @@
         </tr>
     </table>
     <br /><br />
-    <button type="submit">Lägg in ditt val</button>}
+    <button type="submit">Lägg in ditt val</button>}*@
