--- a/Grup_ 8_Annonser/Grup_ 8_Annonser/Views/Home/Create.cshtml
+++ b/Grup_ 8_Annonser/Grup_ 8_Annonser/Views/Home/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@*@model Grup__8_Annonser.ServiceReferenceAnnons.AnnonsKlass
+﻿@model Grup__8_Annonser.ServiceReferenceAnnonser.AnnonsKlass
 @{
 
     ViewBag.Title = "Create";
@@ -21,4 +21,4 @@
         </tr>
     </table>
     <br /><br />
-    <button type="submit">Lägg in ditt val</button>}*@
+    <button type="submit">Lägg in ditt val</button>}
