--- a/Grup_ 8_Annonser/Grup_ 8_Annonser/Views/Home/Update.cshtml
+++ b/Grup_ 8_Annonser/Grup_ 8_Annonser/Views/Home/Update.cshtml
@@ -1,4 +1,4 @@
-﻿@*@model Grup__8_Annonser.ServiceReferenceAnnons.AnnonsKlass
+﻿@model Grup__8_Annonser.ServiceReferenceAnnonser.AnnonsKlass
 @{
     ViewBag.Title = "Update";
 }
@@ -20,5 +20,5 @@
         </tr>
     </table>
     <br /><br />
-    <button type="submit">Uppdatera annons</button>}*@
+    <button type="submit">Uppdatera annons</button>}
 
