--- a/Grup_ 8_Annonser/Grup_ 8_Annonser/Views/Home/Delete.cshtml
+++ b/Grup_ 8_Annonser/Grup_ 8_Annonser/Views/Home/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Grup__8_Annonser.ServiceReferenceAnnonser.AnnonsKlass
+﻿@model Grup__8_Annonser.ServiceReferenceAnnonser.Annonser
 @{
     ViewBag.Title = "Delete";
 }
