--- a/Grup_ 8_Annonser/Grup_ 8_Annonser/Views/Home/rndAnnons.cshtml
+++ b/Grup_ 8_Annonser/Grup_ 8_Annonser/Views/Home/rndAnnons.cshtml
@@ -5,4 +5,5 @@
 
     <h2>rndAnnons</h2>
 
-    <p>Annons: @Model.resource</p>
+    
+<abbr title="@Model.onHooverText"><p>@Model.resource</p></abbr>
