--- a/Grup_ 8_Annonser/Grup_ 8_Annonser/Views/Home/Read.cshtml
+++ b/Grup_ 8_Annonser/Grup_ 8_Annonser/Views/Home/Read.cshtml
@@ -1,22 +1,30 @@
 ﻿@model List<Grup__8_Annonser.ServiceReferenceAnnonser.AnnonsKlass>
 @{
-                ViewBag.Title = "Read";
+    ViewBag.Title = "Read";
 }
 
 <h1>Read annons</h1>
-@*Skriver ut all data från databasen genom en "foreach"*@
-@foreach (var item in Model)
-{
+<hr />
+@Html.ActionLink("Skapa en ny reklam", "Create")
+<br />
+<br />
 <table>
     <tr>
-        <td><p>Annons: @item.resource</p></td>
-        <td>Hoovertext: @item.onHooverText</td>
-        <td>@Html.ActionLink("Radera", "Delete", new { id = item.addId })</td>
-        <td>@Html.ActionLink("Uppdatera", "Update", new { id = item.addId })</td>
+        <th>Annons: </th>
+
+        <th>Hoovertext: </th>
+
     </tr>
+    @*Skriver ut all data från databasen genom en "foreach"*@
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>@item.resource</td>
+            <td>@item.onHooverText</td>
+            <td>@Html.ActionLink("Radera", "Delete", new { id = item.addId })</td>
+            <td>@Html.ActionLink("Uppdatera", "Update", new { id = item.addId })</td>
+        </tr>
+    }
 </table>
 
 
-}
-
-@Html.ActionLink("Skapa en ny reklam", "Create")
